--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,248 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, p, input, button {
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+img {
+  max-width: 100%;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.btn-wr {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 50%;
+  border: 1px solid #D8D8D8;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+/* BG image */ 
+
+.bg-wr {
+  background-size: cover;
+  background-position: top;
+  height: 200px; /* Set a fixed height */
+  width: 100%; /* Cover the width of the browser window */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+}
+
+/* Header */
+
+h1 {
   color: white;
+  letter-spacing: 10px;
+  font-weight: 600;
+  font-size: 23px;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#theme-icon {
+  width: 19px;
+  padding: 0;
+  background: none;
+  border: none;
+}
+
+/* Todo Input */
+
+.todo-input-wr {
+  margin-top: 2.5em;
+  display: flex;
+  gap: 0.85em;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+}
+
+#todo-input {
+  font-size: 12px;
+  width: 83%;
+  border: none;
+  outline: none;
+}
+
+/* Todo List */
+
+.todo-list-wr {
+  margin-top: 1em;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+}
+
+.todo-item-wr {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+.todo-item-wr .left-col {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.todo-desc {
+  font-size: 12px;
+}
+
+.cross-icon {
+  width: 12px;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: #D1D2DA;
+}
+
+.checked {
+  background: rgb(85,221,255);
+  background:  linear-gradient(128deg, rgba(85,221,255,1) 0%, rgba(192,88,243,1) 100%);
+  border: none;
+}
+
+.todo-list-footer-wr {
+  display: flex;
+  padding: 15px 20px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  color: #9495A5;
+}
+
+#clear-completed-btn {
+  border: none;
+  background: none;
+  font-size: 12px;
+  color: #9495A5;
+}
+
+/* List view btns */
+
+#list-view-btns-wr {
+  display: flex;
+  justify-content: center;
+  gap: 0.7em;
+  margin-top: 1em;
+  padding: 15px 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+}
+
+#list-view-btns-wr button {
+  border: none;
+  background: none;
+  font-size: 14px;
+  font-weight: 500;
+  color: #9495A5;
+}
+
+#list-view-btns-wr .active {
+  color: #3A7CFD;
+}
+
+/* Dark theme */
+
+.darkmode .todo-input-wr, 
+.darkmode #todo-input,
+.darkmode .todo-list-footer-wr,
+.darkmode #list-view-btns-wr,
+.darkmode .todo-item-wr {
+  background-color: #25273D;
+}
+
+.darkmode .todo-item-wr {
+  border-bottom: 1px solid rgb(84, 84, 84);
+}
+
+.darkmode p,
+.darkmode input,
+.darkmode button:hover  {
+  color: #C8CBE7;
+}
+
+.darkmode .completed {
+  color: #9495A5;
+} 
+
+
+
+
+
+
+@media (min-width: 600px){
+  
+  .bg-wr {
+    height: 300px;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    font-size: 35px;
   }
+
+  #theme-icon {
+    width: 23px;
+  }
+
+ .todo-desc, #todo-input, .todo-list-footer-wr, #clear-completed-btn, #list-view-btns-wr button {
+    font-size: 18px;
+}
+
+  .cross-icon {
+    width: 18px;
+  }
+
+  .checkbox {
+    width: 24px;
+    height: 24px;
+  }
+
+  #todo-input, .todo-item-wr {
+    padding: 17px 24px;
+  }
+  
+  .todo-item-wr {
+    padding: 20px 24px;
+  }
+
 }
